# patas-sem-lar-backend

./: .env.example  .gitignore  CLAUDE.md  README.md  add  docker-compose.yml  pom.xml  pyproject.toml
alembic/versions/: 12af6908b4fc_service_canonical_and_offering_overrides.py  18a779368dd3_professional_multi_store_and_invites.py  353a6feb39a8_initial.py
app/: main.py
app/core/: config.py  dependencies.py  security.py
app/db/: base.py  session.py
app/models/: agendamento.py  appointment.py  horario_trabalho.py  loja.py  mixins.py  offering.py  professional.py  professional_invite.py  professional_store.py  profissional.py  service.py  servico.py  store.py  user.py  usuario.py  work_schedule.py
app/routers/: agendamentos.py  appointments.py  auth.py  invites.py  loja.py  me.py  notifications.py  professional_nested.py  professionals.py  profissionais.py  services.py  servicos_horarios.py  stores.py
app/schemas/: agendamento.py  appointment.py  auth.py  horario_trabalho.py  invite.py  loja.py  offering.py  professional.py  profissional.py  service.py  servico.py  store.py  user.py  work_schedule.py
app/services/: agendamento_service.py  appointment_service.py  auth_service.py  horario_service.py  invite_service.py  loja_service.py  notification_service.py  offering_service.py  professional_service.py  profissional_service.py  service_service.py  servico_service.py  store_service.py  work_schedule_service.py
guide/: 1_guia_fundacao.md  2_guide_auth.md  3_fase_CRUD.md
tests/: conftest.py
tests/auth/: test_auth.py
tests/invites/: test_invites.py
(+28 files in other folders)
